# proxmox-assessment-engine

./: .gitignore  .secrets.baseline  ARCHITECTURE.md  DESIGN_NEXT_MILESTONE.md  README.html  README.md  ROADMAP.html  ROADMAP.md  _patch_btn_selector.py  _patch_dim_visible.py  _patch_flat.py  _patch_opacity_fix.py  _patch_pass.py  _patch_transparent.py  conftest.py  forge-pack.sh  pyproject.toml
.ai/: CURRENT_STATE.md  NEXT_STEPS.md  SESSION-HANDOFF.md  context.md  decisions.md  pap-audit-2026-06-08-r3.md  pap-audit-2026-06-08.md
ansible/group_vars/: all.yaml
ansible/playbooks/: 01-common.yaml  02-forgejo.yaml  03-operations.yaml  04-k3s.yaml
assessment/tier1/: analyze.py
collector/: base.py  guests.py  hardware.py  network.py  proxmox.py  registry.py  storage.py
config/: rotation-deadline-policy.json
data-model/: bfvault-schema.yaml  bootstrap-state-schema.json  configured-state-schema.json  container-state-schema.json  data-protection-state-schema.json  declared-state-schema.json  external-dependency-state-schema.json  historical-state-schema.json  observability-state-schema.json  observed-state-schema.json  recovery-state-schema.json
deprecated/: ARCHITECTURE-REVIEW-v4.md  ARCHITECTURE-REVIEW-v5.md  ARCHITECTURE-REVIEW-v6.md  CONTAINER-COMPATIBILITY-PLAN.html  MILESTONE-5-DESIGN.md
doc-gen/: dependencies.py  engine.py  external_dependencies.py  readiness.py  readiness_report.py  service_contracts.py  service_state_collector.py  timestamps.py
doc-gen/renderers/: html_base.py  html_bootstrap.py  html_operational_report.py  html_recovery_runbook.py  html_recovery_workbook.py  recovery_runbook.py  runbook.py
docs/: ABOUT-DOCS.html  ABOUT-DOCS.md  ARCHITECTURE-REVIEW-v7.md  ARCHITECTURE.html  AUDIT-FINDINGS.html  AUDIT-FINDINGS.md  CLOUD-STORAGE-SETUP.html  CLOUD-STORAGE-SETUP.md  CLOUDFLARE-SETUP.html  CLOUDFLARE-SETUP.md  CONTAINER-COMPATIBILITY-PLAN.html  CONTAINER-COMPATIBILITY-PLAN.md  DESIGN-HISTORY.html  DESIGN-HISTORY.md  DESIGN-SCHEMA.md  DNS-UPDATE-SETUP.md  DOCS-INDEX.html  DOCS-INDEX.md  DUCKDNS-SETUP.html  DUCKDNS-SETUP.md  FEATURE-HISTORY.html  FEATURE-HISTORY.md  FORGING.html  NODE-SPAWNING.html  PHOENIX.html  PHOENIX.md  README.html  RECONSTRUCTION-DRILL.html  RECONSTRUCTION-DRILL.md  ROADMAP.html  SESSION-HANDOFF.md  SETUP-GUIDE.html  SNIPPET-UPLOAD.html  TALOS-ALTERNATIVE.html  TALOS-ALTERNATIVE.md  TIER2-COLLECTION.html  USER-REGISTRY.html  bfvault.html  test_write.txt
engine/: cli.py  compare.py  db.py  diff.py  opentofu.py  parser.py  repo.py  report.py  report_combined.py  report_compare.py  report_guest.py  schema.py
engine/modules/: __init__.py  guest_inventory.py  guest_parser.py  hardware_parser.py  network_parser.py  proxmox_parser.py  storage_parser.py
history/: index.json
lib/: forge-lib.sh  forge-sync-lib.py  passphrase.py  passphrase_eff.py
pap/: README.md
pap/audits/: 2026-06-07_broodforge-pap-audit.md
pap/compatibility/: Platform-Compatibility-Profiles.md
pap/core/: PAP-Core.manifest.yaml  PAP-Core.md
pap/serialization/: Serialization-Governance.md
pap/state/: RESUME_BLOCK.md  SESSION_HANDOFF.md
proxmox-bootstrap/: FORGING.html  FORGING.md  NODE-SPAWNING.html  NODE-SPAWNING.md  README.md  SNIPPET-UPLOAD.md  TIER2-COLLECTION.md  _image_builder.py  _recovery_readiness_certificate.py  _vault_hierarchy.py  assemble-forge-package.py  assemble-phoenix-package.py  assemble-spawn-package.py  assemble_forge_package.py  assemble_phoenix_package.py  assemble_spawn_package.py  backup.py  backup_engine.py  broodforge_dashboard.py  build-talos-template.sh  capacity_collector.py  collect-tier2.py  collect_tier2.py  continuous_assessment.py  credential_hierarchy.py  data_protection_collector.py  derive-scoped-vault.py  doc-manifest.json  failure_package_analyzer.py  federated_reconstruction.py  federation_docs.py  federation_state.py  forge-image-builder.html  forge-planner.py  forge_keepass_init.py  forge_planner.py  forge_scripts.py  forge_validator.py  generate-answer-file.py  generate-bootstrap-image.py  (+70 more)
proxmox-bootstrap/deprecated/: README.md  forge_workbook.py
proxmox-bootstrap/planners/: naming_planner.py  network_planner.py  storage_planner.py
proxmox-bootstrap/validation/: readiness_validator.py
reports/recovery_tier2/: Readiness-Report.json  Readiness-Report.md  Recovery-Runbook.odt  Recovery-Workbook.ods  generation-report.md
schemas/: assessment.schema.json  declared_resource.schema.json  guest.schema.json
scripts/: forge-enroll-linkerd-ns.sh  forge-init-credential-hierarchy.sh  forge-init-kyverno.sh  forge-init-linkerd.sh  forge-init-velero.sh  forge-kyverno-policy.sh  forge-onboard-user.sh  forge-provision-users.sh  forge-rotate-credential.sh  forge-sync-credentials.sh  forge-velero-backup.sh
tests/: test_cli.py  test_code_health.py  test_collector_framework.py  test_guest.py  test_history.py  test_opentofu.py  test_parser.py  test_parsers.py  test_repo.py  test_reports.py
tests/bash/: forge_phase_test.bats  test_run_static_audit.bats
tests/fuzz/: fuzz_manifest.py  fuzz_spawn_planner.py
tests/static/: test_shellcheck.py
tools/: run-static-audit.sh
(+725 files in other folders)
