[project]
name = "proxmox-assessment-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=3.2",
]

[project.scripts]
pae = "engine.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "collector*"]
