[project]
name = "broodforge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=3.2",
]

[project.scripts]
pae = "engine.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    # static analysis tools — run via tools/run-static-audit.sh or individually
    "ruff>=0.4",
    "bandit>=1.7",
    "vulture>=2.11",
    "detect-secrets>=1.4",
    # shellcheck-py provides a Python shim used by tests/static/test_shellcheck.py
    "shellcheck-py>=0.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "collector*"]

[tool.pytest.ini_options]
# Default coverage — avoids needing --cov on every invocation.
# Override with: pytest --no-cov to skip.
addopts = "--cov=proxmox-bootstrap --cov-branch --cov-report=term-missing -q"
# Note: pytest-ruff and pytest-bandit plugins were evaluated but not wired in:
# - pytest-ruff: requires ruff.toml config integration; prefer explicit ruff CLI
# - pytest-bandit: not actively maintained; bandit runs via run-static-audit.sh
# Both tools run in Tier 1 (tools/run-static-audit.sh) and have dedicated test coverage.

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "S"]
ignore = [
    "S101",  # assert used in tests
    "S603",  # subprocess without shell=True is fine
    "S607",  # partial path to binary is fine for dev tools
    "E501",  # line too long — enforced via line-length above
]
exclude = ["proxmox-bootstrap/deprecated/", "new/"]

[tool.bandit]
exclude_dirs = ["tests", "proxmox-bootstrap/deprecated", "new"]
skips = ["B101", "B404", "B603", "B607"]
