[project]
name = "broodforge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=3.2",
]

[project.scripts]
pae = "engine.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    # static analysis tools — run via tools/run-static-audit.sh or individually
    "ruff>=0.4",
    "bandit>=1.7",
    "vulture>=2.11",
    "detect-secrets>=1.4",
    # shellcheck-py provides a Python shim used by tests/static/test_shellcheck.py
    "shellcheck-py>=0.9",
    # dynamic analysis tools — Phase 1.M
    "hypothesis>=6.100",         # property-based and fuzz testing of pure logic
    "mutmut>=2.0",               # mutation testing — verify tests catch bugs
    "beartype>=0.18",            # runtime type verification as pytest plugin
    "deal>=4.24",                # contract-based pre/postcondition decorators
    "schemathesis>=3.0",         # property-based HTTP API testing
    # atheris (Google coverage-guided fuzzer) is Linux-only; install separately on Linux:
    #   pip install atheris   (requires libFuzzer — Linux x86-64 only)
    # bats (Bash Automated Testing System) is installed via OS package manager:
    #   apt install bats  |  brew install bats-core
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "collector*"]

[tool.pytest.ini_options]
# Default coverage — avoids needing --cov on every invocation.
# Override with: pytest --no-cov to skip.
addopts = "--cov=proxmox-bootstrap --cov-branch --cov-report=term-missing -q"
# Note: pytest-ruff and pytest-bandit plugins were evaluated but not wired in:
# - pytest-ruff: requires ruff.toml config integration; prefer explicit ruff CLI
# - pytest-bandit: not actively maintained; bandit runs via run-static-audit.sh
# Both tools run in Tier 1 (tools/run-static-audit.sh) and have dedicated test coverage.

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "S"]
ignore = [
    "S101",  # assert used in tests
    "S603",  # subprocess without shell=True is fine
    "S607",  # partial path to binary is fine for dev tools
    "E501",  # line too long — enforced via line-length above
]
exclude = ["proxmox-bootstrap/deprecated/", "new/"]

[tool.bandit]
exclude_dirs = ["tests", "proxmox-bootstrap/deprecated", "new"]
skips = ["B101", "B404", "B603", "B607"]

[tool.hypothesis]
# Fixed seed for CI determinism; override with --hypothesis-seed=0 to generate new cases.
deriving_seed = 0
suppress_health_check = ["too_slow"]

[tool.mutmut]
paths_to_mutate = "proxmox-bootstrap/"
tests_dir = "tests/"
# Exclude generated HTML and deprecated modules
runner = "python -m pytest -x --no-cov -q"
